# hashcode2020

./: .gitignore  CMakeLists.txt
data/: newline.txt
src/: main.cpp
src/collections/: book_set.h  bookset.cpp  bookset.h  library_set.cpp  library_set.h
src/entities/: book.cpp  book.h  book_set.cpp  book_set.h  def.h  library.cpp  library.h  library_set.cpp  library_set.h
src/io/: lexer.cpp  lexer.h  parser.cpp  parser.h  word.h
src/problem/: heuristic.h  problem_instance.cpp  problem_instance.h
src/statistics/: basic_info.h  bookset_statistics.cpp  bookset_statistics.h
